SearchCard and switched MainListCard from delclaritive to programmatic Controller -The functionality of the main list card is now uncoupled from the controller SearchCard -A new card that allows for searching the mainlist -TODO: exit button hehe TitleCell -Formatting changes sample.fxml -Removed the mainlist RudeSortButton & Animations -Fixed the sort icon getting stuck at a 45 degree angle

--- a/style.css
+++ b/style.css
@@ -95,6 +95,12 @@
 .button-icon {
     -fx-fill: rgba(0,0,0,.45);
 }
+.floating-action-button {
+    -fx-background-color: #00BCD4;
+    -fx-background-radius: 46px;
+    -fx-min-height: 54px;
+    -fx-min-width: 54px;
+}
 
 .card {
 	-fx-background-color: rgb(255.0, 255.0, 255.0);
